{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 131,
  "lineage": "d27dd2ad-947c-5e83-26bb-e0bc14fa7cde",
  "resources": [
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudcasts_addr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0004842d7bb3a1607",
            "association_id": "eipassoc-08a4e09dc033e3ceb",
            "domain": "vpc",
            "id": "eipalloc-0004842d7bb3a1607",
            "instance": "i-0e844710bd02b3fe6",
            "network_border_group": "cn-northwest-1",
            "network_interface": "eni-0fe1d30786c3bdf81",
            "private_dns": "ip-10-0-27-81.cn-northwest-1.compute.internal",
            "private_ip": "10.0.27.81",
            "public_dns": "ec2-69-235-149-229.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "69.235.149.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts",
              "Role": "app"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts",
              "Role": "app"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudcasts_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0438d80ac116a1415",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:instance/i-0e844710bd02b3fe6",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e844710bd02b3fe6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe1d30786c3bdf81",
            "private_dns": "ip-10-0-27-81.cn-northwest-1.compute.internal",
            "private_ip": "10.0.27.81",
            "public_ip": "69.235.149.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e6644d6d37d77c4",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4129acba0bf4470",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts",
              "Role": "app"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts",
              "Role": "app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0160214898bcc72da"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_app.random_shuffle.subnets",
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudcasts_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0438d80ac116a1415",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:instance/i-04bb2bed49f3110ce",
            "associate_public_ip_address": false,
            "availability_zone": "cn-northwest-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bb2bed49f3110ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d96dc409e6d8aa96",
            "private_dns": "ip-10-0-46-233.cn-northwest-1.compute.internal",
            "private_ip": "10.0.46.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ed194f7f283a0e7",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3a8d6ef51c350bc",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-worker",
              "Project": "cloudcasts",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-worker",
              "Project": "cloudcasts",
              "Role": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00027ea2524631331"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_worker.random_shuffle.subnets",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f960b3da3dd9e5a",
            "association_id": "eipassoc-002840cd305411f3a",
            "domain": "vpc",
            "id": "eipalloc-01f960b3da3dd9e5a",
            "network_border_group": "cn-northwest-1",
            "network_interface": "eni-09556190c109921ce",
            "private_dns": "ip-10-0-10-131.cn-northwest-1.compute.internal",
            "private_ip": "10.0.10.131",
            "public_dns": "ec2-52-83-242-226.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "52.83.242.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-eip",
              "Project": "cloudcasts.io",
              "Role": "private",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-eip",
              "Project": "cloudcasts.io",
              "Role": "private",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:internet-gateway/igw-0e9aa529a8ef3703e",
            "id": "igw-0e9aa529a8ef3703e",
            "owner_id": "353880636441",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f960b3da3dd9e5a",
            "connectivity_type": "public",
            "id": "nat-0f6240520642abc78",
            "network_interface_id": "eni-09556190c109921ce",
            "private_ip": "10.0.10.131",
            "public_ip": "52.83.242.226",
            "subnet_id": "subnet-0a94ad41095dd4d7e",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-ngw",
              "Project": "cloudcasts.io",
              "Role": "private",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-ngw",
              "Project": "cloudcasts.io",
              "Role": "private",
              "VPC": "vpc-0fc13057dd39168d5"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01bf4360c541eef8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f6240520642abc78",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01bf4360c541eef8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9aa529a8ef3703e",
            "id": "r-rtb-0ac1290d4b09ee5f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac1290d4b09ee5f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:route-table/rtb-01bf4360c541eef8d",
            "id": "rtb-01bf4360c541eef8d",
            "owner_id": "353880636441",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f6240520642abc78",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-rt",
              "Project": "cloudcasts.io",
              "Role": "private",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-rt",
              "Project": "cloudcasts.io",
              "Role": "private",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:route-table/rtb-0ac1290d4b09ee5f1",
            "id": "rtb-0ac1290d4b09ee5f1",
            "owner_id": "353880636441",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9aa529a8ef3703e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-rt",
              "Project": "cloudcasts.io",
              "Role": "public",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-rt",
              "Project": "cloudcasts.io",
              "Role": "public",
              "VPC": "vpc-0fc13057dd39168d5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cn-northwest-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f42a3143151005",
            "route_table_id": "rtb-01bf4360c541eef8d",
            "subnet_id": "subnet-0df0dd4d626bdb4bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734e81cd4a658b97",
            "route_table_id": "rtb-01bf4360c541eef8d",
            "subnet_id": "subnet-0a3a8d6ef51c350bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b993ab6f6827bfdd",
            "route_table_id": "rtb-01bf4360c541eef8d",
            "subnet_id": "subnet-080545f77f3955b66"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cn-northwest-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eae8ba4114f8e390",
            "route_table_id": "rtb-0ac1290d4b09ee5f1",
            "subnet_id": "subnet-0a94ad41095dd4d7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0479e66174cb48381",
            "route_table_id": "rtb-0ac1290d4b09ee5f1",
            "subnet_id": "subnet-054869ef69dd07bad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fce7e601f1d70f7",
            "route_table_id": "rtb-0ac1290d4b09ee5f1",
            "subnet_id": "subnet-0b4129acba0bf4470"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:security-group/sg-00027ea2524631331",
            "description": "Private Internet Access",
            "egress": [],
            "id": "sg-00027ea2524631331",
            "ingress": [],
            "name": "cloudcasts-staging-private-sg",
            "name_prefix": "",
            "owner_id": "353880636441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-sg",
              "Project": "staging",
              "Role": "private"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-sg",
              "Project": "staging",
              "Role": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:security-group/sg-0160214898bcc72da",
            "description": "Public Internet Access",
            "egress": [],
            "id": "sg-0160214898bcc72da",
            "ingress": [],
            "name": "cloudcasts-staging-public-sg",
            "name_prefix": "",
            "owner_id": "353880636441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-sg",
              "Project": "cloudcasts.io",
              "Role": "public"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-sg",
              "Project": "cloudcasts.io",
              "Role": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/17"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2404862442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00027ea2524631331",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1762403367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00027ea2524631331",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2541967334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0160214898bcc72da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1527276876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0160214898bcc72da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-935834103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0160214898bcc72da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-554240595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0160214898bcc72da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cn-northwest-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-0df0dd4d626bdb4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.32.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df0dd4d626bdb4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-subnets",
              "Project": "cloudcasts.io",
              "Role": "private",
              "Subnet": "cn-northwest-1a-4"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-subnets",
              "Project": "cloudcasts.io",
              "Role": "private",
              "Subnet": "cn-northwest-1a-4"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-0a3a8d6ef51c350bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.40.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3a8d6ef51c350bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-subnets",
              "Project": "cloudcasts.io",
              "Role": "private",
              "Subnet": "cn-northwest-1b-5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-subnets",
              "Project": "cloudcasts.io",
              "Role": "private",
              "Subnet": "cn-northwest-1b-5"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-080545f77f3955b66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1c",
            "availability_zone_id": "cnnw1-az3",
            "cidr_block": "10.0.48.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080545f77f3955b66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-subnets",
              "Project": "cloudcasts.io",
              "Role": "private",
              "Subnet": "cn-northwest-1c-6"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-subnets",
              "Project": "cloudcasts.io",
              "Role": "private",
              "Subnet": "cn-northwest-1c-6"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cn-northwest-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-0a94ad41095dd4d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94ad41095dd4d7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "cn-northwest-1a-1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "cn-northwest-1a-1"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-054869ef69dd07bad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.16.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054869ef69dd07bad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "cn-northwest-1b-2"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "cn-northwest-1b-2"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "cn-northwest-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-0b4129acba0bf4470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1c",
            "availability_zone_id": "cnnw1-az3",
            "cidr_block": "10.0.24.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4129acba0bf4470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "cn-northwest-1c-3"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "cn-northwest-1c-3"
            },
            "vpc_id": "vpc-0fc13057dd39168d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:vpc/vpc-0fc13057dd39168d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/17",
            "default_network_acl_id": "acl-00f3f0680bd3282db",
            "default_route_table_id": "rtb-09f674357a5f016f6",
            "default_security_group_id": "sg-0dd47454d6ee3c6af",
            "dhcp_options_id": "dopt-b4a32ddd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fc13057dd39168d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f674357a5f016f6",
            "owner_id": "353880636441",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            }
          }
        }
      ]
    }
  ]
}